# AI-Weather-Forecasting

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
data/processed/: X_test_cls.parquet  X_test_reg.parquet  X_train_cls.parquet  X_train_reg.parquet  X_val_cls.parquet  X_val_reg.parquet  sydney_daily_current.csv  y_test_cls.parquet  y_test_reg.parquet  y_train_cls.parquet  y_train_reg.parquet  y_val_cls.parquet  y_val_reg.parquet
models/precipitation_fall/: metadata.json  model.joblib
models/rain_or_not/: metadata.json  model.joblib
notebooks/: 01_weather_forecasting_experiment.ipynb
scripts/: train_models.py
src/weather_forecasting/: __init__.py  config.py  data.py  features.py  inference.py  models.py
tests/: test_features.py
