[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sydney-rainfall-forecasting"
version = "0.1.0"
description = "End-to-end data science project for live Sydney rainfall forecasting with Open-Meteo, scikit-learn, and Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "scikit-learn==1.5.1",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry]
packages = [{ include = "weather_forecasting", from = "src" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
